--- a/scormxblock/static/css/scormxblock.css
+++ b/scormxblock/static/css/scormxblock.css
@@ -1,31 +1,61 @@
 /* CSS for ScormXBlock */
-.scormxblock_block .scorm_object {
+.openedxscorm_block .scorm_object {
     border: none;
 }
 
-span.setting-input-file {
+.openedxscorm_block span.setting-input-file {
     padding-left: 25%;
     margin-left: 14px;
     padding-top: 5px;
 }
 
-span.setting-input-file span{
+.openedxscorm_block span.setting-input-file span {
     font-weight: bold;
 }
 
-.alert {
-    position: relative;
-    font-size: 0.9rem;
-    font-style: italic;
-    padding: .75rem 1.25rem;
-    margin-top: -0.8rem;
-    margin-bottom: 1rem;
-    border: 1px solid transparent;
-    border-radius: .25rem;
+.openedxscorm_block .full-screen-scorm  .scorm_object {
+    position: fixed;
+    border: none;
+    overflow: hidden;
+    top: 55px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 65px);
+    z-index: 10000;
 }
 
-.alert-danger {
-    color: #721c24 !important;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
+.openedxscorm_block .full-screen-scorm {
+    position: fixed;
+    border: none;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+    background-color: #ffffff;
+}
+
+.openedxscorm_block .scorm_button {
+    padding-bottom: 20px;
+}
+
+.openedxscorm_block .full-screen-scorm .scorm_button {
+    padding: 20px;
+}
+
+.openedxscorm_block .full-screen-off {
+    display: none;
+}
+
+.openedxscorm_block .full-screen-scorm .full-screen-off {
+    display: block;
+}
+
+.openedxscorm_block .full-screen-scorm .full-screen-on {
+    display: none;
 }
